fix card on grey bg

--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.html
@@ -85,6 +85,7 @@
                   [id]="property.key"
                   [(ngModel)]="customTextProps[property.key].value"
                   (ngModelChange)="updateCustomTextProps()"
+                  style="height: 150px"
                 ></textarea>
               </div>
             </div>
@@ -174,6 +175,7 @@
                   [id]="property.key"
                   [(ngModel)]="customTextProps[property.key].value"
                   (ngModelChange)="updateCustomTextProps()"
+                  style="height: 120px"
                 ></textarea>
               </div>
             </div>
