add dropdown option infoicon, hovered option event

--- a/packages/web/src/app/doc-pages/components/dropdown-doc/dropdown-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/dropdown-doc/dropdown-doc.component.html
@@ -29,6 +29,12 @@
             </a>
             for more information on the icon component
           </div>
+          <div class="e-mt-16">
+            Furthermore, a status icon may be added to the right side of an option in the dropdown by adding a
+            key value pair of
+            <code class="code-text">statusIcon: IconName</code>
+            to the dropdown option. It is not required that all options have a status icon for any to show up.
+          </div>
           <app-component-example-generator
             [componentData]="dropdownIconsCode"
             [inlineExample]="true"
