--- a/packages/web/src/app/doc-pages/components/dropdown-doc/dropdown-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/dropdown-doc/dropdown-doc.component.html
@@ -31,9 +31,15 @@
           </div>
           <div class="e-mt-16">
             Furthermore, a status icon may be added to the right side of an option in the dropdown by adding a
-            key value pair of
-            <code class="code-text">statusIcon: IconName</code>
-            to the dropdown option. It is not required that all options have a status icon for any to show up.
+            status to the dropdown option. The possible statuses are:
+            <span class="code-text">success</span>
+            ,
+            <span class="code-text">warning</span>
+            ,
+            <span class="code-text">error</span>
+            , and
+            <span class="code-text">information</span>
+            . It is not required that all options have a status for any to show up.
           </div>
           <app-component-example-generator
             [componentData]="dropdownIconsCode"
