--- a/packages/web/src/app/doc-pages/components/dropdown-doc/dropdown-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/dropdown-doc/dropdown-doc.component.html
@@ -35,17 +35,43 @@
           ></app-component-example-generator>
         </ng-container>
       </app-component-subsection>
-      <app-component-subsection [sectionTitle]="'Option status'">
+      <app-component-subsection [sectionTitle]="'Status icon'">
         <ng-container ngProjectAs="sectionContent">
           <div>
-            Furthermore, a status icon may be added to the right side of an option in the dropdown by adding a
-            status to the dropdown option. The possible statuses are:
-            <span class="code-text">info</span>
-            ,
-            <span class="code-text">warning</span>
-            , and
-            <span class="code-text">error</span>
-            . It is not required that all options have a status for any to show up.
+            Add a status icon on the right side to specific options of any dropdown. Use it to quickly notify
+            the user to pay extra attention to some options over others. Each status consists of a predefined
+            color and icon that signals their level of importance. A status should always be accompanied by an
+            explaination to make sure the user understands the meaning of any status. Avoid overusing status -
+            only utilize it if necessery. Choose the correct status to secure a consistent and universal user
+            experience.
+
+            <ul class="e-list e-list--icons">
+              <li>
+                <span class="e-list__icon">
+                  <i class="e-icon e-icon--remove_circle e-icon--color-error" aria-hidden="true"></i>
+                </span>
+                <h4 class="e-title-caps">Error</h4>
+                Notify that something is wrong. Remember to explain why or what the user can do to resolve the
+                problem. Example: Error, missing or invalid option.
+              </li>
+              <li>
+                <span class="e-list__icon">
+                  <i class="e-icon e-icon--warning_circle e-icon--color-warning" aria-hidden="true"></i>
+                </span>
+                <h4 class="e-title-caps">Warning</h4>
+                Help users to avoid error situations or notify that something undesirable may occur when
+                choosing this option. Remember to explain the reason behind the warning and how to avoid or
+                fix the undesirable outcome.
+              </li>
+              <li>
+                <span class="e-list__icon">
+                  <i class="e-icon e-icon--information_circle" aria-hidden="true"></i>
+                </span>
+                <h4 class="e-title-caps">Informative</h4>
+                Use to inform the user that more information is available when choosing this option, unlike
+                other options. Do not use if relevant for all options.
+              </li>
+            </ul>
           </div>
           <app-component-example-generator
             [componentData]="dropdownStatusCode"
