docs(timepicker): add initial docs

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -299,9 +299,15 @@
 
       <elvia-timepicker isCompact="true"></elvia-timepicker>
 
-      <elvia-timepicker [value]="timepickerValue"></elvia-timepicker>
+      <elvia-timepicker
+        label="Only hours"
+        [value]="timepickerValue"
+        minuteGranularity="60"
+      ></elvia-timepicker>
 
-      <elvia-timepicker disabled="true"></elvia-timepicker>
+      <elvia-timepicker isDisabled="true"></elvia-timepicker>
+
+      <elvia-timepicker label="Required" isRequired="true"></elvia-timepicker>
     </div>
   </div>
 </div>
