docs(timepicker): improve documentation

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -299,11 +299,7 @@
 
       <elvia-timepicker isCompact="true"></elvia-timepicker>
 
-      <elvia-timepicker
-        label="Only hours"
-        [value]="timepickerValue"
-        minuteGranularity="60"
-      ></elvia-timepicker>
+      <elvia-timepicker label="Only hours" [value]="timepickerValue" minuteInterval="60"></elvia-timepicker>
 
       <elvia-timepicker isDisabled="true"></elvia-timepicker>
 
