--- a/packages/web/src/app/doc-pages/components/forms/timepicker-doc/timepicker-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/timepicker-doc/timepicker-doc.component.html
@@ -11,23 +11,45 @@
   <!--CEG-->
   <app-component-example-generator [componentData]="componentData"></app-component-example-generator>
 
-  <!--USAGE-->
-  <app-component-section [sectionTitle]="'Usage'">
+  <!-- SIZE -->
+  <app-component-section [sectionTitle]="'Size'">
     <ng-container ngProjectAs="sectionContent">
-      <app-when-to-use [whens]="does"></app-when-to-use>
-      <app-component-subsection [sectionTitle]="'Options'">
+      There are two different sizes of the time picker; normal and compact. Much like compact text fields, the
+      compact time picker picker is a version of the text field that’s primarily designed for internal
+      systems, and shouldn’t be mixed with the other input style.
+    </ng-container>
+  </app-component-section>
+
+  <!--ACCESSIBILITY-->
+  <app-component-section [sectionTitle]="'Accessibility'">
+    <ng-container ngProjectAs="sectionContent">
+      <app-component-subsection [sectionTitle]="'Keyboard navigation'">
         <ng-container ngProjectAs="sectionContent">
-          <app-component-subsubsection [sectionTitle]="'Title outside'">
-            <ng-container ngProjectAs="sectionContent">
-              The title option can be used when a header is useful.
-            </ng-container>
-          </app-component-subsubsection>
-          <app-component-subsubsection [sectionTitle]="'Colored'">
-            <ng-container ngProjectAs="sectionContent">
-              The box with a colored line should be used if you want the box to take more attention, but
-              should not be used with multiple boxes on the same page.
-            </ng-container>
-          </app-component-subsubsection>
+          <div class="accessibility-keyboard-navigation">
+            <div>
+              <span class="keyboard-button">Space</span>
+              or
+              <span class="keyboard-button">Enter</span>
+              to open the time picker when the toggle is focused.
+            </div>
+            <div>
+              <span class="keyboard-button">Tab</span>
+              to toggle between hour- and minute-selection while focus is within the popup.
+            </div>
+            <div>
+              <span class="keyboard-button icon" aria-label="Arrow up">
+                <i class="e-icon e-icon--arrow_up e-icon--xs" aria-hidden="true" aria-hidden="true"></i>
+              </span>
+              <span class="keyboard-button icon" style="margin-left: 0px" aria-label="Arrow down">
+                <i class="e-icon e-icon--arrow_down e-icon--xs" aria-hidden="true" aria-hidden="true"></i>
+              </span>
+              to increase/decrease value for hours/minutes, depending on which list has focus.
+            </div>
+            <div>
+              <span class="keyboard-button">Escape</span>
+              to close the popup.
+            </div>
+          </div>
         </ng-container>
       </app-component-subsection>
     </ng-container>
