--- a/packages/web/src/app/doc-pages/components/forms/timepicker-doc/timepicker-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/timepicker-doc/timepicker-doc.component.html
@@ -1,5 +1,5 @@
 <!--HEADER-->
-<app-component-header [figmaUrl]="figmaUrl" [figmaOnly]="true">
+<app-component-header [figmaUrl]="figmaUrl" [lastUpdated]="componentData.changelog[0].date">
   <ng-container ngProjectAs="headerTitle">Time picker</ng-container>
   <ng-container ngProjectAs="headerDescription">
     {{ description }}
@@ -7,19 +7,72 @@
 </app-component-header>
 
 <!--BODY-->
-<div class="page-body">
-  <!--Temporary-->
-  <div>
-    <div class="e-content-loader e-w-100" *ngIf="!loadedFigmaModel" style="width: 880px; height: 600px"></div>
-    <iframe
-      [ngClass]="!loadedFigmaModel ? 'e-none' : ''"
-      style="border: 1px solid rgba(0, 0, 0, 0.1)"
-      width="100%"
-      height="450"
-      src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2F0hCktnFvRvSHVDntaaOSEu%2FInputs%3Fnode-id%3D4473%253A27459"
-      allowfullscreen
-      (load)="hideContentLoader($event)"
-      title="Embedded sketches of timepicker in Figma"
-    ></iframe>
-  </div>
+<div class="page-body e-mt-72">
+  <!--CEG-->
+  <app-component-example-generator [componentData]="componentData"></app-component-example-generator>
+
+  <!-- SIZE -->
+  <app-component-section [sectionTitle]="'Size'">
+    <ng-container ngProjectAs="sectionContent">
+      There are two different sizes of the time picker; normal and compact. Much like compact text fields, the
+      compact time picker picker is a version of the text field that’s primarily designed for internal
+      systems, and shouldn’t be mixed with the other input style.
+    </ng-container>
+  </app-component-section>
+
+  <!--ACCESSIBILITY-->
+  <app-component-section [sectionTitle]="'Accessibility'">
+    <ng-container ngProjectAs="sectionContent">
+      <app-component-subsection [sectionTitle]="'Keyboard navigation'">
+        <ng-container ngProjectAs="sectionContent">
+          <div class="accessibility-keyboard-navigation">
+            <div>
+              <span class="keyboard-button">Space</span>
+              or
+              <span class="keyboard-button">Enter</span>
+              to open the time picker when the toggle is focused.
+            </div>
+            <div>
+              <span class="keyboard-button">Tab</span>
+              to toggle between hour- and minute-selection while focus is within the popup.
+            </div>
+            <div>
+              <span class="keyboard-button icon" aria-label="Arrow up">
+                <i class="e-icon e-icon--arrow_up e-icon--xs" aria-hidden="true" aria-hidden="true"></i>
+              </span>
+              <span class="keyboard-button icon" style="margin-left: 0px" aria-label="Arrow down">
+                <i class="e-icon e-icon--arrow_down e-icon--xs" aria-hidden="true" aria-hidden="true"></i>
+              </span>
+              to increase/decrease value for hours/minutes, depending on which list has focus.
+            </div>
+            <div>
+              <span class="keyboard-button">Escape</span>
+              to close the popup.
+            </div>
+          </div>
+        </ng-container>
+      </app-component-subsection>
+    </ng-container>
+  </app-component-section>
+
+  <!--INSTALLATION-->
+  <app-component-section [sectionTitle]="'Installation'">
+    <ng-container ngProjectAs="sectionContent">
+      <app-component-installation [componentData]="componentData"></app-component-installation>
+    </ng-container>
+  </app-component-section>
+
+  <!--PROPERTIES-->
+  <app-component-section [sectionTitle]="'Properties'">
+    <ng-container ngProjectAs="sectionContent">
+      <app-component-properties-table [componentData]="componentData"></app-component-properties-table>
+    </ng-container>
+  </app-component-section>
+
+  <!--CHANGELOG-->
+  <app-component-section [sectionTitle]="'Changelog'">
+    <ng-container ngProjectAs="sectionContent">
+      <app-component-changelog [changelog]="componentData.changelog"></app-component-changelog>
+    </ng-container>
+  </app-component-section>
 </div>
