--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -286,4 +286,24 @@
     <h3>Tabs</h3>
     <elvia-tabs [items]="['Epler', 'Appelsin', 'Bananer', 'Druer', 'Kiwi']" [value]="1"></elvia-tabs>
   </div>
+
+  <!--Timepicker-->
+  <div class="example-wrapper">
+    <h3>Timepicker</h3>
+    <div style="display: flex; gap: 32px; flex-wrap: wrap; align-items: baseline">
+      <elvia-timepicker></elvia-timepicker>
+
+      <elvia-timepicker label="Custom label"></elvia-timepicker>
+
+      <elvia-timepicker label=""></elvia-timepicker>
+
+      <elvia-timepicker isCompact="true"></elvia-timepicker>
+
+      <elvia-timepicker label="Only hours" [value]="timepickerValue" minuteInterval="60"></elvia-timepicker>
+
+      <elvia-timepicker isDisabled="true"></elvia-timepicker>
+
+      <elvia-timepicker label="Required" isRequired="true"></elvia-timepicker>
+    </div>
+  </div>
 </div>
