fix hover style and cursor

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -11,6 +11,7 @@
         (loadMoreItems)="dropdownChangeItems()"
         [hasLoadMoreItemsButton]="true"
         [isLoadingMoreItems]="dropdownIsLoading"
+        [isCompact]="true"
       ></elvia-dropdown>
     </div>
     <!--Inverted version-->
