work on hover effect when isLoadingMoreItems

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -13,6 +13,7 @@
         [hasLoadMoreItemsButton]="true"
         [isLoadingMoreItems]="dropdownIsLoading"
       ></elvia-dropdown>
+      <div class="e-p-16"></div>
       <elvia-dropdown
         [label]="'Compact'"
         [items]="dropdownDefOptions"
