--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -6,11 +6,140 @@
     <h3>Test your component here</h3>
     <!--Normal version-->
     <div class="e-bg-white">
-      <elvia-badge>
-        <div slot="content">
-          <h4>Hello there</h4>
-        </div>
-      </elvia-badge>
+      <div style="display: flex; gap: 2rem; flex-wrap: wrap">
+        <elvia-badge>
+          <div slot="content">
+            <button class="e-thumbnail" aria-label="Thumbnail button that opens the image in a larger view">
+              <img src="https://picsum.photos/200" alt="Thumbnail example image" />
+            </button>
+          </div>
+        </elvia-badge>
+
+        <elvia-badge badgeColor="red">
+          <div slot="content">
+            <button class="e-thumbnail" aria-label="Thumbnail button that opens the image in a larger view">
+              <img src="https://picsum.photos/200" alt="Thumbnail example image" />
+            </button>
+          </div>
+        </elvia-badge>
+
+        <elvia-badge badgeColor="black">
+          <div slot="content">
+            <button class="e-thumbnail" aria-label="Thumbnail button that opens the image in a larger view">
+              <img src="https://picsum.photos/200" alt="Thumbnail example image" />
+            </button>
+          </div>
+        </elvia-badge>
+
+        <elvia-badge count="88" type="numbered">
+          <div slot="content">
+            <button class="e-thumbnail" aria-label="Thumbnail button that opens the image in a larger view">
+              <img src="https://picsum.photos/200" alt="Thumbnail example image" />
+            </button>
+          </div>
+        </elvia-badge>
+
+        <elvia-badge badgeColor="red" count="88" type="numbered">
+          <div slot="content">
+            <button class="e-thumbnail" aria-label="Thumbnail button that opens the image in a larger view">
+              <img src="https://picsum.photos/200" alt="Thumbnail example image" />
+            </button>
+          </div>
+        </elvia-badge>
+
+        <elvia-badge badgeColor="black" count="88" type="numbered">
+          <div slot="content">
+            <button class="e-thumbnail" aria-label="Thumbnail button that opens the image in a larger view">
+              <img src="https://picsum.photos/200" alt="Thumbnail example image" />
+            </button>
+          </div>
+        </elvia-badge>
+
+        <elvia-badge count="100" type="numbered">
+          <div slot="content">
+            <button class="e-thumbnail" aria-label="Thumbnail button that opens the image in a larger view">
+              <img src="https://picsum.photos/200" alt="Thumbnail example image" />
+            </button>
+          </div>
+        </elvia-badge>
+
+        <elvia-badge
+          badgeColor="red"
+          count="100"
+          type="numbered"
+          role="status"
+          aria-live="polite"
+          aria-label="badge with 100"
+        >
+          <div slot="content">
+            <button class="e-thumbnail" aria-label="Thumbnail button that opens the image in a larger view">
+              <img src="https://picsum.photos/200" alt="Thumbnail example image" />
+            </button>
+          </div>
+        </elvia-badge>
+
+        <elvia-badge badgeColor="black" count="100" type="numbered">
+          <div slot="content">
+            <button class="e-thumbnail" aria-label="Thumbnail button that opens the image in a larger view">
+              <img src="https://picsum.photos/200" alt="Thumbnail example image" />
+            </button>
+          </div>
+        </elvia-badge>
+
+        <elvia-badge>
+          <div slot="content">
+            <i class="e-icon e-icon--chat e-icon--md" aria-hidden="true"></i>
+          </div>
+        </elvia-badge>
+
+        <elvia-badge badgeColor="red">
+          <div slot="content">
+            <i class="e-icon e-icon--chat e-icon--md" aria-hidden="true"></i>
+          </div>
+        </elvia-badge>
+
+        <elvia-badge badgeColor="black">
+          <div slot="content">
+            <i class="e-icon e-icon--chat e-icon--md" aria-hidden="true"></i>
+          </div>
+        </elvia-badge>
+
+        <elvia-badge count="88" type="numbered">
+          <div slot="content">
+            <i class="e-icon e-icon--chat e-icon--md" aria-hidden="true"></i>
+          </div>
+        </elvia-badge>
+
+        <elvia-badge badgeColor="red" count="88" type="numbered">
+          <div slot="content">
+            <i class="e-icon e-icon--chat e-icon--md" aria-hidden="true"></i>
+          </div>
+        </elvia-badge>
+
+        <elvia-badge badgeColor="black" count="88" type="numbered">
+          <div slot="content">
+            <i class="e-icon e-icon--chat e-icon--md" aria-hidden="true"></i>
+          </div>
+        </elvia-badge>
+
+        <elvia-badge count="100" type="numbered">
+          <div slot="content">
+            <i class="e-icon e-icon--chat e-icon--md" aria-hidden="true"></i>
+          </div>
+        </elvia-badge>
+
+        <elvia-badge badgeColor="red" count="100" type="numbered">
+          <div slot="content">
+            <i class="e-icon e-icon--chat e-icon--md" aria-hidden="true"></i>
+          </div>
+        </elvia-badge>
+
+        <elvia-badge badgeColor="black" count="100" type="numbered">
+          <div slot="content">
+            <i class="e-icon e-icon--chat e-icon--md" aria-hidden="true"></i>
+          </div>
+        </elvia-badge>
+      </div>
     </div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
