--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -5,24 +5,7 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white">
-      <elvia-dropdown
-        [label]="'Normal'"
-        [items]="dropdownDefOptions"
-        (loadMoreItems)="dropdownChangeItems()"
-        [hasLoadMoreItemsButton]="true"
-        [isLoadingMoreItems]="dropdownIsLoading"
-      ></elvia-dropdown>
-      <div class="e-p-16"></div>
-      <elvia-dropdown
-        [label]="'Compact'"
-        [items]="dropdownDefOptions"
-        (loadMoreItems)="dropdownChangeItems()"
-        [hasLoadMoreItemsButton]="true"
-        [isLoadingMoreItems]="dropdownIsLoading"
-        [isCompact]="true"
-      ></elvia-dropdown>
-    </div>
+    <div class="e-bg-white"></div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
   </div>
